feat: add thumbnail

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -2,6 +2,7 @@
 title: "Hello, World!"
 date: "2025-02-15"
 description: "Playground for Next.js and MDX"
+thumbnail: "/images/planet-earth.jpg"
 ---
 
 # Hello, world!
