feat: add tailwind typography and a playground page that is only rendered in local development

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -1,27 +1,9 @@
 ---
 title: "Hello, World!"
 date: "2025-02-15"
-description: "Playground for Next.js and MDX"
+description: "Why I started this blog."
 thumbnail: "/images/planet-earth.jpg"
 tags: ["nextjs", "mdx", "playground"]
 ---
 
-# Hello, world!
-
-Below is an example of markdown in JSX.
-<br/>
-<div style={{backgroundColor: 'violet', padding: '1rem'}}>
-  Try and change the background color to `tomato`.
-</div>
-
-<br/>
-Here's a sample pie 🥧 chart:
-
-<PieChart 
-  data={[
-    { name: 'Group A', value: 400 },
-    { name: 'Group B', value: 300 },
-    { name: 'Group C', value: 300 },
-    { name: 'Group D', value: 200 }
-  ]}
-/>
+## Hello, World!
