--- a/content/posts/1-mcp-simple-but-exciting.mdx
+++ b/content/posts/1-mcp-simple-but-exciting.mdx
@@ -1,7 +1,7 @@
 ---
 title: "MCP, simple but exciting"
 date: "2025-06-27"
-description: "If you haven't seen enough media on MCP, here's my super simple explanation of what an MCP server is and why it's simple but exciting."
+description: "If you haven't already seen enough content on MCP, here's my brief explanation of what MCP is and why it's simple but exciting."
 thumbnail: "/images/1-mcp-client-server-meme.jpg"
 tags: ["mcp", "llm", "integration"]
 ---
@@ -18,14 +18,27 @@ LLMs were already capable of doing this before MCP, but MCP brings the standardi
 
 Components of MCP
 
+- hosts, LLM-based AI tools like Claude Desktop.
+- clients, run inside hosts and connect to servers in a 1-to-1 relationship.
+- servers, lightweight programs that wrap capabilities offered by services.
+- services, existing tools or data sources that servers can integrate with e.g. local file system, or a weather service on the internet. This could be practically any technology that exists today.
+
+Here's a simplified example of how this works in practice:
+1. you prompt your AI tool with an intention "get the current traffic conditions on the M1 freeway".
+2. the tool may ask whether your would like to use the traffic service.
+3. the tool communicates via it's client to the traffic server over MCP calling `get_current_traffic()`
+4. the traffic server communicates to the traffic service, typically REST over HTTP.
+5. the response is provided as context to your AI tool which you can then interrogate.
+
 ![MCP Client Server Example](/images/1-mcp-client-server-example.jpg)
 
+You might be asking "why can't the host talk to the services directly"? They can, but this would be a bespoke integration between LLM vendor ABC and service vendor XYZ. Which means no interoperability.
 
-You can checkout this MCP server I built for Wordle - [mcp-wordle](https://github.com/corey-stidston/mcp-wordle) to see how this fits in with the diagram above. In my case, I built my own implementation of the game and this runs inside the MCP server but you could just as easily reach out via HTTP to a service hosted within your computer or on the internet.
+Internet services, the majority of which are REST over HTTP, have a high degree of variance in terms of request/response formats, error handling and authentication which makes it difficult for AI tools to integrate with directly. MCP solves this by acting as a simplified (abstract) layer between an LLM and a service which allows the LLM to communicate in a language it understands.
 
-### 🎬 Conclusion
+You can checkout a working example of an MCP server I built for Wordle [mcp-wordle](https://github.com/corey-stidston/mcp-wordle) to see how this fits in with the diagram above. In my case, I built my own implementation of the game and this runs inside the MCP server but you could just as easily reach out via HTTP to a service hosted within your computer or on the internet.
 
-Learning about MCP, it's hard to not get excited about the opportunities ahead and thankfully, for the time being, they still involve the human touch 😎
+Thanks for reading 🐢
 
 ### 🔗 Helpful resources
 
