--- a/content/posts/1-mcp-simple-but-exciting.mdx
+++ b/content/posts/1-mcp-simple-but-exciting.mdx
@@ -13,7 +13,7 @@ MCP stands for Model Context Protocol and it's a standardised way to connect LLM
 In <a href="https://modelcontextprotocol.io/introduction" target="_blank" rel="noopener noreferrer">their own words</a>, Model Context Protocol is described as "the USB-C port for AI applications":
 > Think of MCP like a USB-C port for AI applications. Just as USB-C provides a standardized way to connect your devices to various peripherals and accessories, MCP provides a standardized way to connect AI models to different data sources and tools.
 
-LLMs were already capable of doing this before MCP, but MCP brings the standardisation of this integration as a protocol. It's a simple but significant milestone because it allows for interoperability of LLMs and services, meaning any LLM can integrate with any service so long as they both comply with MCP. 
+LLMs were already capable of integrating with external services before MCP, but MCP brings the standardisation of this integration as a protocol. It's a simple but significant milestone because it allows for interoperability of LLMs and services, meaning any LLM can integrate with any service so long as they both comply with MCP. 
 
 Additionally, MCP is open and accessible to all developers which means you can build MCP servers for your own needs. This is why we have seen the proliferation of <a href="https://mcpservers.org/" target="_blank" rel="noopener noreferrer">awesome MCP servers</a> in the last few months. Official SDKs and documentation are available which make it easy to get started. 
 
