feat: small change

--- a/content/posts/1-mcp-the-usb-c-port-for-ai.mdx
+++ b/content/posts/1-mcp-the-usb-c-port-for-ai.mdx
@@ -29,7 +29,7 @@ Components of MCP:
 - Hosts - LLM-based AI tools like Claude Desktop.
 - Clients - run inside hosts and connect to servers in a 1-to-1 relationship.
 - Servers - lightweight programs that wrap capabilities offered by services.
-- Services - existing tools or data sources e.g. local file system, or a weather service on the internet.
+- Services - existing tools or data sources e.g. local file system, or a traffic service on the internet.
 
 ![MCP architecture diagram](/images/1-mcp-architecture-diagram.jpg)
 
