--- a/content/posts/1-mcp-the-usb-c-port-for-ai.mdx
+++ b/content/posts/1-mcp-the-usb-c-port-for-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: "MCP, the USB-C port for AI applications"
 date: "2025-06-27"
-description: "If you haven't already seen enough content on MCP, here's my brief explanation of what MCP is and why it's exciting. This article is intended for people who work in IT and want to keep up to date with advancements in LLMs."
+description: "My brief explanation of what MCP is and why it's exciting. This article is intended for people who work in IT and want to keep up to date with advancements in LLMs."
 thumbnail: "/images/1-mcp-client-server-meme.jpg"
 tags: ["mcp", "llm", "integration"]
 ---
