fix: settings on iframe

--- a/content/posts/2-post-office-horizon-scandal.mdx
+++ b/content/posts/2-post-office-horizon-scandal.mdx
@@ -32,8 +32,9 @@ Also, check out Dave Farley's video on the matter. He provides good commentary o
   src="https://www.youtube.com/embed/h3UIdGRBGlY"
   title="YouTube video player"
   frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowFullScreen
+  referrerPolicy="strict-origin-when-cross-origin"
   style={{ display: 'block', margin: '0 auto' }}
 ></iframe>
 
